--- a/CU_Portfolio2/Content/Site.css
+++ b/CU_Portfolio2/Content/Site.css
@@ -4,12 +4,6 @@ body {
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
@@ -18,14 +12,14 @@ body {
     white-space: normal;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
+/* Set widths on the form inputs since otherwise they're 100% wide 
 input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="tel"],
 input[type="select"] {
     max-width: 280px;
-}
+}*/
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -36,3 +30,56 @@ input[type="select"] {
         padding: 0;
     }
 }
+.navbar {
+    background-color: blue;
+}
+
+.jumbotron {
+    background-color: darkblue;
+    color: white
+}
+
+.img-circle {
+    height: 200px;
+    width: 200px
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .img-circle {
+        justify-content: center
+    }
+}
+
+footer {
+    background-color: black;
+    color: white
+}
+.nav-link{
+    color:white
+}
+iframe {
+    height: 900px;
+    width: 1200px;
+}
+@media only screen and (min-width : 1224px) {
+    iframe{
+        
+        max-width:1000px;
+    }
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    iframe{
+        max-width: 480px;
+    }
+}
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    iframe{
+        max-width:1024px;
+    }
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 568px) {
+    iframe{
+        max-width:568px
+    }
+}
+
